# app/Models/HolidayParticipant.php
@@ -11,13 +11,6 @@ use App\Models\StrategyWms;
 class HolidayParticipant extends Pivot
 {
     use  HasUuid, SoftDeletes;
-
-    protected $table = 'holidays_x_participants';
-    // protected $fillable = [
-    //     'name',
-    //     'last_name',
-    //     'email',
-    // ];
-
+    protected $table = 'holiday_participant';
 
 }
